--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "chalk": "^5.3.0",
     "clipboardy": "^4.0.0",
     "openai": "^4.71.0",
     "yargs": "^17.7.2"
